   not a buffer overflow.
   Added a check for the failure.
   scale_calculate() (and hence scale()) will now fail if any of the
   scale size parameters are a reference.
   http://rt.cpan.org/Ticket/Display.html?id=35172

 - Regression: filling a greyscale image with a hatch used the wrong
   color channels from the supplied fg/bg colors.
   https://rt.cpan.org/Ticket/Display.html?id=35278

Imager 0.63 - 7 April 2008
===========

This release primarily contains changes to improve ease of use -
rather than you having to convert images to the appropriate number of
channels, Imager handles it internally.  How to handle drawing colors
and the default combine mode is a thornier problem left for some other
release.

 - the font libraries are now only initialized when needed.
   http://rt.cpan.org/Ticket/Display.html?id=28825

 - moved the imtoc.perl code into Imager::Preprocess

 - paste() and rubthrough() now adapt the source image data to the
   destination, so you can now safely paste/rubthrough from greyscale
   images to color images or back, or from alpha channel images to
   noalpha channels or back.
   https://rt.cpan.org/Ticket/Display.html?id=30908

 - rubthrough() now falls back to pasting when the source doesn't have
   an alpha channel.  This effectively treats the source as having a
   max alpha channel, the right thing to do.
   http://rt.cpan.org/Ticket/Display.html?id=29944

 - re-worked most of the area filling code to use a common set of
   functions when filling.
   Corrected normal combine mode.
   Rewrote most of the combine modes to match the way the SVG draft
   defines them with respect to a translucent source and destination.
   Added tests for translucent source and destination.
   Added tests to check 8-bit/sample and double/sample combines work
   similarly.
   https://rt.cpan.org/Ticket/Display.html?id=29879

 - writing a 2 or 4 channel image to a JPEG file will now write that